@@ -69,7 +69,7 @@ void	freeUrlinfo(/*@only@*/urlinfo *u);
 
 /*@only@*/ FD_t	ufdOpen(const char * pathname, int flags, mode_t mode);
 int	ufdClose(/*@only@*/FD_t fd);
-/*@observer@*/ const char *urlStrerror(const char *url);
+const char *urlStrerror(const char *url);
 
 int	urlGetFile(const char * url, const char * dest);
 void    urlInvalidateCache(const char * url);
